Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,12 +1,9 @@
 steps:
-- script: git clone $(git_repo)
-- script: docker build -t $(acr)/$(tag) . 
-- script: docker login -u $(docker_user_name) -p $(docker_password) $(acr_url)
-- script: docker push $(acr)/$(tag)
+- script: git clone https://github.com/blessedimagepipeline/$(git_repo).git
+- script: docker build -t appsvcbuildacr.azurecr.io/$(tag) $(git_repo)
+- script: docker login -u appsvcbuildacr -p $(docker_password) appsvcbuildacr.azurecr.io
+- script: docker push appsvcbuildacr/$(tag)
   env:
     git_repo: $(git_repo)
-    acr: $(acr)
     tag: $(tag)
-    docker_user_name: $(docker_user_name)
     docker_password: $(docker_password)
-    acr_url: $(acr_url)
