--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ steps:
 - script: git clone https://github.com/blessedimagepipeline/$(git_repo).git
 - script: docker build -t appsvcbuildacr.azurecr.io/$(tag) $(git_repo)
 - script: docker login -u appsvcbuildacr -p $(docker_password) appsvcbuildacr.azurecr.io
-- script: docker push appsvcbuildacr/$(tag)
+- script: docker push appsvcbuildacr.azurecr.io/$(tag)
   env:
     git_repo: $(git_repo)
     tag: $(tag)
