--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,6 @@
 steps:
-- script: git clone $(git_repo)
-- script: docker build -t appsvcbuildacr.azurecr.io/$(tag) $(git_repo)
-- script: docker login -u appsvcbuildacr -p $(docker_password) appsvcbuildacr.azurecr.io
-- script: docker push appsvcbuildacr.azurecr.io/$(tag)
-  env:
-    git_repo: $(git_repo)
-    tag: $(tag)
-    docker_password: $(docker_password)
+- script: git clone $(gitRepo)
+- script: docker build -t appsvcbuildacr.azurecr.io/$(imageTag) $(gitRepo)
+- script: docker login -u appsvcbuildacr -p $(acrPassword) appsvcbuildacr.azurecr.io
+- script: docker push appsvcbuildacr.azurecr.io/$(imageTag)
+
