--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 steps:
-- script: git clone $(gitRepo)
-- script: docker build -t appsvcbuildacr.azurecr.io/$(imageTag) $(gitRepo)
+- script: git clone $(gitURL)
+- script: docker build -t appsvcbuildacr.azurecr.io/$(imageTag) $(gitURL)
 - script: docker login -u appsvcbuildacr -p $(acrPassword) appsvcbuildacr.azurecr.io
 - script: docker push appsvcbuildacr.azurecr.io/$(imageTag)
 
