Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,4 +4,5 @@ steps:
     - script: docker login -u appsvcbuildacr -p $(acrPassword) appsvcbuildacr.azurecr.io
     - script: git clone $(gitURL)
     - script: docker build --no-cache -t appsvcbuildacr.azurecr.io/$(imageTag) $(gitURL)
+      timeoutInMinutes: 120
     - script: docker push appsvcbuildacr.azurecr.io/$(imageTag)
