--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ steps:
     - script: docker login -u appsvcbuildacr -p $(acrPassword) appsvcbuildacr.azurecr.io
     - script: git clone $(gitURL)
     - script: |
-        if [ $(useCache) == True ]
+        if [ "$(useCache)" -eq "True" ]
         then
             docker build -t appsvcbuildacr.azurecr.io/$(imageTag) $(gitURL)
         else
