--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,7 @@ pool:
 steps:
     - script: docker login -u appsvcbuildacr -p $(acrPassword) appsvcbuildacr.azurecr.io
     - script: git clone $(gitURL)
+    - script: git checkout $(branchName)
     - bash: |
         if [[ "$(useCache)" -eq "True" ]]
         then
