--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,7 @@ steps:
     - script: docker login -u appsvcbuildacr -p $(acrPassword) appsvcbuildacr.azurecr.io
     - script: git clone $(gitURL)
     - script: cd $(repoName)
+    - script: git fetch origin
     - script: git checkout origin/$(branchName)
     - bash: |
         if [[ "$(useCache)" -eq "True" ]]
